--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cejj.sedd">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,11 +20,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.LoginActivity" />
-        <activity android:name=".activities.SignupActivity" />
-        <activity android:name=".activities.ForgotActivity" />
-        <activity android:name=".activities.DrawerActivity" />
-        <activity android:name=".fragments.ProfileFragment"></activity>
+        <activity android:name=".activities.LoginActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.SignupActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.ForgotActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.DrawerActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.EmailVerifyActivity"
+            android:screenOrientation="portrait"/>
+
     </application>
 
 </manifest>
